<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303349">
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:minHeight="60dp"
        android:gravity="center"
        android:background="#000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About us"
            android:textColor="#fff"
            android:textSize="22dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

           <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="About ‘PenID’ :"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_ncf_pen"
                android:textColor="#fff"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="About Garland Writing Instruments :"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_garland_1"
                android:textColor="#fff"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Made in the USA Writing Instrument Collections:"
                android:textColor="#fff"
                android:textStyle="italic"
                android:textSize="15dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_garland_2"
                android:textColor="#fff"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="1"
                    android:id="@+id/logo"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:src="@drawable/garland_pen_logo"/>
                <ImageView
                    android:layout_weight="1"
                    android:id="@+id/usa"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:src="@drawable/usa"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Contact us for a distributor in your area"
                android:textColor="#fff"
                android:textSize="15dp"
                android:layout_marginTop="20dp"/>
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ImageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_phone_white_36dp"/>
                <TextView
                    android:id="@+id/TextView1"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ImageView1"
                    android:text="@string/phone_401_828_9582"
                    android:textSize="14dp"
                    android:textColor="#fff"/>
                <ImageView
                    android:id="@+id/ImageView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/ImageView1"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/baseline_print_white_36dp"/>
                <TextView
                    android:id="@+id/TextView2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ImageView2"
                    android:text="@string/fax_401_823_7460"
                    android:textSize="14dp"
                    android:layout_below="@+id/ImageView1"
                    android:textColor="#fff"/>
                <ImageView
                    android:id="@+id/ImageView3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/ImageView2"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/baseline_email_white_36dp"/>
                <TextView
                    android:id="@+id/TextView3"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ImageView3"
                    android:text="@string/email_customerservice_garlandpen_com"
                    android:textSize="14dp"
                    android:layout_below="@+id/ImageView2"
                    android:textColor="#fff"/>
                <ImageView
                    android:id="@+id/ImageView4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/ImageView3"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/baseline_location_on_white_36dp"/>
                <TextView
                    android:id="@+id/TextView4"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ImageView4"
                    android:text="@string/address"
                    android:textSize="14dp"
                    android:layout_below="@+id/ImageView3"
                    android:textColor="#fff"/>
                <ImageView
                    android:id="@+id/ImageView5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/TextView4"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/baseline_home_white_36dp"/>
                <TextView
                    android:id="@+id/TextView5"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ImageView5"
                    android:text="@string/website_https_www_garlandpen_com"
                    android:textSize="14dp"
                    android:layout_below="@+id/TextView4"
                    android:textColor="#fff"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/about_dialog_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            android:background="@drawable/button_bg"/>
    </LinearLayout>
</LinearLayout>